--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -36,12 +36,17 @@
                   <div class="form-group">
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
-                        <label for="date">Enter a Date</label>
-                        <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
+                        <label for="date">Search for UFO Sighting Info</label>
+                        <input class="form-control" id="date" type="text" placeholder="Date">
+                        <input class="form-control" id="city" type="text" placeholder="City">
+                        <input class="form-control" id="state" type="text" placeholder="State">
+                        <input class="form-control" id="country" type="text" placeholder="Country">
+                        <input class="form-control" id="shape" type="text" placeholder="Shape">
                       </li>
                     </ul>
                   </div>
-                  <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                  <button id="reset" type="button" class="btn btn-secondary">Filter Table</button>
+                  <button id="filter" type="button" class="btn btn-secondary">Reset Table</button>
                 </form>
               </div>
             </div>
